And a commit that I don't know the reason of...

--- a/emailops-build/roles/build-ecelerity/files/global/default_policy.conf
+++ b/emailops-build/roles/build-ecelerity/files/global/default_policy.conf
@@ -6,33 +6,33 @@ Relay_Hosts = ( "0.0.0.0/0" )
 
 # Add support for all common character sets.
 Datasource "csv_UTF-8" {
-    uri = ( "csv:" )
-    max_rows = -1
-    assume_charset = "UTF-8"
+  uri = ( "csv:" )
+  max_rows = -1
+  assume_charset = "UTF-8"
 }
 
 Datasource "csv_GBK" {
-    uri = ( "csv:" )
-    max_rows = -1
-    assume_charset = "GBK"
+  uri = ( "csv:" )
+  max_rows = -1
+  assume_charset = "GBK"
 }
 
 Datasource "csv_ISO-8859-1" {
-    uri = ( "csv:" )
-    max_rows = -1
-    assume_charset = "ISO-8859-1"
+  uri = ( "csv:" )
+  max_rows = -1
+  assume_charset = "ISO-8859-1"
 }
 
 Datasource "csv_ISO-2022-JP" {
-    uri = ( "csv:" )
-    max_rows = -1
-    assume_charset = "ISO-2022-JP"
+  uri = ( "csv:" )
+  max_rows = -1
+  assume_charset = "ISO-2022-JP"
 }
 
 Datasource "csv_Big5" {
-    uri = ( "csv:" )
-    max_rows = -1
-    assume_charset = "Big5"
+  uri = ( "csv:" )
+  max_rows = -1
+  assume_charset = "Big5"
 }
 
 # Load inbound_audit module
@@ -66,8 +66,8 @@ cidrdb { }
 #}
 
 # Load the default_policy
-#scriptlet "scriptlet" {
-#  script "default_policy" {
-#    source = "msys.default_policy"
-#  }
-#}
+scriptlet "scriptlet" {
+  script "default_policy" {
+    source = "msys.default_policy"
+  }
+}
