--- a/emailops-build/roles/build-ecelerity/files/global/msgc_server.conf
+++ b/emailops-build/roles/build-ecelerity/files/global/msgc_server.conf
@@ -3,11 +3,11 @@
 
 msgc_server {
    peers = [
-	mx01.cableone.cmh .caspersbox.com= "10.35.6.41"
-	mx02.cableone.cmh .caspersbox.com= "10.35.6.42"
-	smtp01.cableone.cmh .caspersbox.com= "10.35.6.50"
-	smtp02.cableone.cmh .caspersbox.com= "10.35.6.51"
-	ecmgr01.cableone.cmh .caspersbox.com= "10.35.6.40"
+	mx01.viasat.aga .caspersbox.com= "10.201.16.41"
+	mx02.viasat.aga .caspersbox.com= "10.201.16.42"
+	smtp02.viasat.aga .caspersbox.com= "10.201.16.51"
+	smtp01.viasat.aga .caspersbox.com= "10.201.16.50"
+	ecmgr01.viasat.aga .caspersbox.com= "10.201.16.40"
 
    ]
 }
