--- a/emailops-build/roles/build-ecelerity/files/global/whitelist.cfg
+++ b/emailops-build/roles/build-ecelerity/files/global/whitelist.cfg
@@ -33,6 +33,22 @@
 ##           type = host; address = [192.168.32.0/24];
 ##           type = host; address = [mx1.somecompany.com];
 
+# TSS-10382
+type = host; address = [74.124.198.49];
+
+# TSS-10499
+type = host; address = [170.61.19.28];
+type = host; address = [170.61.19.29];
+type = host; address = [170.61.19.30];
+type = host; address = [170.61.19.31];
+type = host; address = [170.61.21.33];
+type = host; address = [170.61.21.41];
+type = host; address = [170.61.21.42];
+type = host; address = [170.61.21.43];
+
+#TSS-10800
+type = host; address = [167.89.2.210];
+
 ## TYPE: header            (SMTP header whitelists)
 ##
 ##
@@ -96,3 +112,4 @@
 ##          <N/A>
 ## Example:
 ##          type = body; regex = [Daily (Bill|Track)ing Report for ....-..-..];
+
