--- a/emailops-build/roles/build-ecelerity/tasks/apply-configuration.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/apply-configuration.yml
@@ -3,13 +3,78 @@
 #   DESCRIPTION:  Perform post-installation configuration
 #==============================================================================
 ---
-- name: Synchronize configuration
-  unarchive:
-    src=default.tar.gz
-    dest="/opt/msys/ecelerity/etc/conf"
-    copy=yes
+##
+## SVN checkout
+##
+- name: (POSTINSTALL) Check out current configuration from cluster manager (MX)
+  subversion:
+    dest=/opt/msys/ecelerity/conf
+    password="{{ svn_password }}"
+    repo="{{ inbound.svn.host }}"
+    revision=HEAD
+    username=admin
+  when: is_mx
 
-- name: (POST-INSTALL) Create eccluster.conf
+- name: (POSTINSTALL) Check out current configuration from cluster manager (SMTP)
+  subversion:
+    dest=/opt/msys/ecelerity/conf
+    password="{{ svn_password }}"
+    repo="{{ outbound.svn.host }}"
+    revision=HEAD
+    username=admin
+  when: is_smtp
+
+##
+## Copy updated global configuration
+##
+- name: (POSTINSTALL) Apply configuration files (global)
+  synchronize:
+    src="global"
+    dest="{{ install_dir }}/etc/conf/"
+    archive=yes
+    checksum=yes
+    compress=no
+    mode=push
+    perms=yes
+    recursive=yes
+    rsync_timeout=0
+    rsync_opts="-avr --delete --no-motd --stats --progress"
+
+##
+## Copy updated default configuration
+##
+- name: (POSTINSTALL) Apply configuration files (default (MX))
+  synchronize:
+    src="default/mx"
+    dest="{{ install_dir }}/etc/conf/default"
+    archive=yes
+    checksum=yes
+    compress=no
+    mode=push
+    perms=yes
+    recursive=yes
+    rsync_timeout=0
+    rsync_opts="-avr --delete --no-motd --stats --progress"
+  when: is_mx
+
+- name: (POSTINSTALL) Apply configuration files (default (SMTP))
+  synchronize:
+    src="default/mx"
+    dest="{{ install_dir }}/etc/conf/default"
+    archive=yes
+    checksum=yes
+    compress=no
+    mode=push
+    perms=yes
+    recursive=yes
+    rsync_timeout=0
+    rsync_opts="-avr --delete --no-motd --stats --progress"
+  when: is_smtp
+
+##
+## Copy customizations to config
+##
+- name: (POSTINSTALL) Create eccluster.conf
   template:
     src=eccluster.j2
     dest="/opt/msys/ecelerity/etc/conf/global"
@@ -17,7 +82,7 @@
     group="{{ group_name }}"
     mode=0644
 
-- name: (POST-INSTALL) Create ecelerity-cluster.conf
+- name: (POSTINSTALL) Create ecelerity-cluster.conf
   template:
     src=ecelerity-cluster.j2
     dest="/opt/msys/ecelerity/etc/conf/global"
@@ -25,7 +90,7 @@
     group="{{ group_name }}"
     mode=0644
 
-- name: (POST-INSTALL) Create ecelerity.conf
+- name: (POSTINSTALL) Create ecelerity.conf
   template:
     src=ecelerity.j2
     dest="/opt/msys/ecelerity/etc/conf/global"
@@ -33,7 +98,7 @@
     group="{{ group_name }}"
     mode=0644
 
-- name: (POST-INSTALL) Create client_vars.siv
+- name: (POSTINSTALL) Create client_vars.siv
   template:
     src=client_vars.j2
     dest="/opt/msys/ecelerity/etc/conf/default/siv"
@@ -41,7 +106,7 @@
     group="{{ group_name }}"
     mode=0600
 
-- name: (POST-INSTALL) Create auth.lua
+- name: (POSTINSTALL) Create auth.lua
   template:
     src=auth.j2
     dest="/opt/msys/ecelerity/etc/conf/default/lua"
@@ -56,4 +121,3 @@
     owner="root"
     group="root"
     mode=0644
-
