--- a/emailops-build/roles/build-ecelerity/vars/main.yml
+++ b/emailops-build/roles/build-ecelerity/vars/main.yml
@@ -15,8 +15,15 @@ user_shell: /bin/bash
 user_uid: 454
 
 ##
+## disks
+##
+mountpoints:
+  - name: /opt
+
+##
 ## template updates
 ##
+install_dir: /opt/msys/ecelerity
 manager_hostname: "ecmgr01.{{ client_name }}.{{ datacenter }}.synacor.com"
 manager_ipaddr: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 cluster_group: ec_cluster
@@ -26,3 +33,9 @@ maildrops:
  - list
  - of
  - drops
+
+##
+## subversion!
+##
+inbound.svn.host: "https://ecmgr01.{{ client_name }}.{{ datacenter }}.synacor.com:2027/config/inbound/boot"
+outbound.svn.host: "https://ecmgr01.{{ client_name }}.{{ datacenter }}.synacor.com:2027/config/outbound/boot"
