--- a/emailops-build/roles/build-zimbra/tasks/maildrop/zimlets.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/zimlets.yml
@@ -49,12 +49,19 @@
 ##
 ## custom skins/zimlets
 ##
-#- name: (POSTINSTALL) Install zimlets (client specific)
-#  yum:
-#    disable_gpg_check=yes
-#    name="{{ item }}"
-#    state=present
-#  with_items: "{{ customizations }}"
+- name: (POSTINSTALL) Install zimlets (client specific)
+  yum:
+    disable_gpg_check=yes
+    name="{{ item }}"
+    state=present
+  with_items: "{{ custom_zimlets }}"
+
+- name: (POSTINSTALL) Install skins (client specific)
+  yum:
+    disable_gpg_check=yes
+    name="{{ item }}"
+    state=present
+  with_items: "{{ custom_skins }}"
 
 ## zimbra 7 zimlets
 - name: (POSTINSTALL) Install zimlets (zimbra-skin-synacor-synabase)
