--- a/emailops-build/roles/build-zimbra/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-zimbra/tasks/run-postinstall.yml
@@ -3,9 +3,9 @@
 #   DESCRIPTION:  Configure Zimbra maildrop post-installation
 #==============================================================================
 ---
-###
-### Run zmsetup after installation to configure
-###
+##
+## Run zmsetup after installation to configure
+##
 - name: (POSTINSTALL) Create resource file for unattended installation
   template:
     src=unattended.j2
@@ -16,7 +16,7 @@
 
 - name: (POSTINSTALL) Copy zmsetup patch (8.0.6_GA_5922.RHEL6_64-20131203103753)
   copy:
-    src="806.patch"
+    src=806.patch
     dest="{{ tmpdir }}/zmsetup.patch"
     owner="{{ user_name }}"
     group="{{ group_name }}"
@@ -25,7 +25,7 @@
 
 - name: (POSTINSTALL) Copy zmsetup patch (all others)
   copy:
-    src="all.patch"
+    src=all.patch
     dest="{{ tmpdir }}/zmsetup.patch"
     owner="{{ user_name }}"
     group="{{ group_name }}"
@@ -65,8 +65,7 @@
 
 ##
 ## Notify puppet after install
-## NOTE: We arent ignoring errors
-## because if puppet fails so will zimbra
+## NOTE: We arent ignoring errors because if puppet fails so will zimbra
 ##
 - name: Notify puppet
   command: puppet agent -t
@@ -89,7 +88,7 @@
 
 - name: (POSTINSTALL) Copy java.security update to target host
   copy:
-    src="{{ playbook_dir }}/files/java.security"
+    src=java.security
     dest="{{ install_dir }}/java/jre/lib/security/java.security"
     owner="{{ user_name }}"
     group="{{ group_name }}"
@@ -268,3 +267,4 @@
 ##
 ## POSTINSTALL COMPLETE
 ##
+
