--- a/emailops-build/roles/build-zimbra/tasks/ldap/replica.yml
+++ b/emailops-build/roles/build-zimbra/tasks/ldap/replica.yml
@@ -11,8 +11,10 @@
   become: yes
   become_user: zimbra
   become_method: sudo
+  when: is_master_ldap|bool
 
 - command: "{{ install_dir }}/bin/ldap restart"
   become: yes
   become_user: zimbra
   become_method: sudo
+  when: is_master_ldap|bool
